--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.4.7",
     "axios": "0.27.2",
     "axios-mock-adapter": "1.20.0",
+    "date-fns": "^2.30.0",
     "prettier": "2.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -20,13 +21,17 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "sass": "^1.62.1",
     "typescript": "4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "prettier": "prettier --write '*/**/*.{ts,tsx,js,jsx,css,scss,json}'"
+    "prettier": "prettier --write '*/**/*.{ts,tsx,js,jsx,css,scss,json}'",
+    "format": "prettier --write src/**/*..{ts,tsx,js,jsx,css,scss,json}",
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix"
   },
   "eslintConfig": {
     "extends": [
